# RZPercussion_Site

./: .gitignore  Dockerfile  README.md  db.sqlite3  fly.toml  manage.py  pyproject.toml  requirements.txt
aboutme/: urls.py  views.py
aboutme/static/: about.css
aboutme/templates/aboutme/: about.html
compositions/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
compositions/migrations/: 0001_initial.py  0002_composition_complete.py
compositions/static/: composition.css
compositions/templates/compositions/: composition.html  index.html
home/: urls.py  views.py
home/templates/home/: main.html
performances/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
performances/migrations/: 0001_initial.py  0002_performed_piece_slug.py  0003_performed_piece_arranger_performed_piece_event.py  0004_performers_performed_piece_music_link_and_more.py  0005_instrumentcategory.py  0006_instruments_category.py  0007_piecetype.py  0007_rename_performed_piece_performedpiece.py  0008_rename_performers_performer.py  0009_rename_instruments_instrument.py  0010_alter_instrumentcategory_options.py  0011_performedpiece_is_public.py
performances/static/: base.css  index.css  performance.css
performances/templates/performances/: base.html  index.html  performance.html
rzpercussion_site/: asgi.py  settings.py  urls.py  wsgi.py
static/: attributions.txt
static/css/: base.css
staticfiles/: comp_index.css  perf_index.css  performance.css
staticfiles/css/: 404.css
templates/: 404.html  500.html  base.html
